--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^2.5.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.7.0",
     "vue": "^2.6.11",
